<resources>
    <string name="app_name">Ignus</string>


    //--------------------------------------------------------------------------------------------//
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_event_details">Event Details</string>
    <string name="nav_registered_events">Registered Event</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_faqs">FAQs</string>
    <string name="nav_sponsors">Sponsors</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_developers">Developers</string>
    <string name="nav_header_dummy_1">Abhinav Suthar</string>
    <string name="nav_header_dummy_2">abhinav.suthar.50@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_home">Cultural</string>
    <string name="title_dashboard">Technical</string>
    <string name="title_notifications">Flagship</string>


    <string name="lorem">Would you like to receive - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="lorem2">
              <div align="middle" id="menu">
                 <a href="/index.htm">HOME</a> |
                 <a href="/about/contact_us.htm">CONTACT</a> |
                 <a href="/about/index.htm">ABOUT</a>
              </div>

              <div align="left" bgcolor="white" id="content">
                 <h5>Content Articles</h5>
                 <p>Actual content goes here.....</p>
              </div>
    </string>

    <string name="register_event">Register Event</string>
    <string name="loading">Loading…</string>
    <string name="more_details"><![CDATA[More Details >>]]></string>
    <string name="download_pdf"><![CDATA[Download Pdf >>]]></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="failed">Failed</string>
    <string name="team_size">%1$d-%2$d</string>

</resources>
