<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/edo_call"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#455A64"
        android:src="@drawable/ic_ignus_logo"
        android:padding="72dp"
        app:layout_constraintBottom_toTopOf="@+id/dummy2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <View
        android:id="@+id/dummy2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/edo_avatar" />

    <RelativeLayout
        android:id="@+id/edo_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61">

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:background="@drawable/temp1"
            android:elevation="6dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#3876De"
            android:elevation="8dp"
            android:hint="@string/username"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3876De"
            android:elevation="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button_shape_round_corner"
        android:text="@string/login"
        android:textColor="#FFF"
        app:layout_anchor="@+id/edo_avatar"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="@+id/edo_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/forgot_password"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edo_avatar"
        app:layout_constraintVertical_bias="0.39" />

</android.support.constraint.ConstraintLayout>